[project]
name = "ai-resource-planner"
version = "0.1.0"
description = "An AI-driven agentic tool that helps to create a project planning for resource allocation"
authors = [
    {name = "Alan Amaya",email = "alan.amayamtz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
