[project]
name = "ai-resource-planner"
version = "0.1.0"
description = "An AI-driven agentic tool that helps to create a project planning for resource allocation"
authors = [
    {name = "Alan Amaya",email = "alan.amayamtz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai (>=0.3.33,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

